@@ -64,7 +64,6 @@ typedef __loff_t __off64_t;
 # endif
 
 #if defined (__powerpc__) || defined (__s390__) || defined (__s390x__)
-#define __glibcpp_plain_char_is_signed false
 #define __glibcpp_wchar_t_is_signed true
 #endif
 
